--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript">
-      var number = 123;
-    </script>
+    <link rel="stylesheet" href="style.css">
     <title>Currency converter</title>
     
 </head>
 <body onload="myFunction()">
-<h1>Currency converter</h1>
+<h1 class="titles">Currency converter</h1>
 <input
   type="text"
   id="temp"
@@ -31,18 +29,6 @@
   size="10"
   placeholder="exchange rate" />
 <pre id="log">1</pre>
-<script type="text/javascript">
-  const logElement = document.getElementById("log");
-const inputElement = document.getElementById("temp");
-const factorElement= document.getElementById("factor");
-inputElement.addEventListener("keyup", () => {
-  logElement.innerText = `${inputElement.value*factorElement.value}`;
-});
-factorElement.addEventListener("keyup", () => {
-  logElement.innerText = `${inputElement.value*factorElement.value}`;
-});
-$("pre").css({"display":"inline","margin":"0"});
-</script>
-    
 </body>
+<script type="text/javascript" src="converter.js"></script>
 </html>
