--- a/currency/index.html
+++ b/currency/index.html
@@ -10,7 +10,7 @@
 <body onload="myFunction()">
 <h1 class="titles">Currency converter</h1>
 <input
-  type="text"
+  type="number"
   id="temp"
   name="temp"
   required
@@ -20,7 +20,7 @@
   placeholder="value"
   value="" />
 <span>* </span><input
-  type="text"
+  type="number"
   id="factor"
   name="factor"
   required
